--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,10 @@
-<h2>Hello world</h2>
+<%- include('header'); -%>
+
+<main role="main" class="inner cover">
+  <p class="lead">Create and participate in polls.</p>
+  <p class="lead">
+    <a href="#" class="btn btn-lg btn-secondary">Sign up</a>
+  </p>
+</main>
+
+<%- include('footer'); -%>
