Add sign in form page

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,11 +24,9 @@
 		<div class="inner">
 		    <h3 class="masthead-brand">Polls</h3>
 		    <nav class="nav nav-masthead justify-content-center">
-			<a class="nav-link" href="#">About</a>
 			<a class="nav-link" href="#">Polls</a>
-			<a class="nav-link" href="#">Contact</a>
 			<a class="nav-link" href="#">Sign up</a>
-			<a class="nav-link" href="#">Sign in</a>
+			<a class="nav-link" href="/signin">Sign in</a>
 		    </nav>
 		</div>
 	    </header>
