Add routes for GET and POST signup.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,10 +22,10 @@
 	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 	    <header class="masthead mb-auto">
 		<div class="inner">
-		    <h3 class="masthead-brand">Polls</h3>
+		    <h3 class="masthead-brand"><a href="/" style="color: white">Polls</a></h3>
 		    <nav class="nav nav-masthead justify-content-center">
 			<a class="nav-link" href="#">Polls</a>
-			<a class="nav-link" href="#">Sign up</a>
+			<a class="nav-link" href="/signup">Sign up</a>
 			<a class="nav-link" href="/signin">Sign in</a>
 		    </nav>
 		</div>
