--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <main role="main" class="inner cover">
   <p class="lead">Create and participate in polls.</p>
   <p class="lead">
-    <a href="#" class="btn btn-lg btn-secondary">Sign up</a>
+    <a href="/signup" class="btn btn-lg btn-secondary">Sign up</a>
   </p>
 </main>
 
