--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,5 +1,7 @@
 <%- include('header'); -%>
 
+<h2> Sign in </h2>
+
 <form class="form-signin">
     <div class="form-label-group">
         <label for="inputEmail">Email address:</label>
