--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -2,15 +2,15 @@
 
 <h2> Sign in </h2>
 
-<form class="form-signin">
+<form class="form-signin" method='POST' action="/signin">
     <div class="form-label-group">
         <label for="inputEmail">Email address:</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     </div>
 
     <div class="form-label-group">
         <label for="inputPassword">Password:</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required>
     </div>
 
     </br>
