--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-<!--	<link rel="icon" href="../../../../favicon.ico"> -->
+	<!--	<link rel="icon" href="../../../../favicon.ico"> -->
 
 	<title>Cover Template for Bootstrap</title>
 
@@ -23,11 +23,21 @@
 	    <header class="masthead mb-auto">
 		<div class="inner">
 		    <h3 class="masthead-brand"><a href="/" style="color: white">Polls</a></h3>
-		    <nav class="nav nav-masthead justify-content-center">
-			<a class="nav-link" href="#">Polls</a>
-			<a class="nav-link" href="/signup">Sign up</a>
-			<a class="nav-link" href="/signin">Sign in</a>
-		    </nav>
+
+		    <% if (!currentUser) { %>
+			<nav class="nav nav-masthead justify-content-center">
+			    <a class="nav-link" href="#">Polls</a>
+			    <a class="nav-link" href="/signup">Sign up</a>
+			    <a class="nav-link" href="/signin">Sign in</a>
+			</nav>
+		    <% } else { %>
+			<nav class="nav nav-masthead justify-content-center">
+			    <a class="nav-link" href="#">Polls</a>
+			    <a class="nav-link" href="/profile">Profile</a>
+			    <a class="nav-link" href="/signout">Sign out</a>
+			</nav>
+		    <% } %>
+
 		</div>
 	    </header>
 
