--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,8 @@
 <%- include('header'); -%>
 
-<h2> Profile </h2>
-
-<div style="color:red">todo...</div>
+<div>
+<p>Username: <%= username %></p>
+<p>Email: <%= email %> </p>
+</div>
 
 <%- include('footer'); -%>
