--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,43 +1,44 @@
 <!doctype html>
 <html lang="en">
-    <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<!--	<link rel="icon" href="../../../../favicon.ico"> -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!--	<link rel="icon" href="../../../../favicon.ico"> -->
 
-	<title>Cover Template for Bootstrap</title>
+    <title>Cover Template for Bootstrap</title>
 
-	<!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-	<!-- Custom styles for this template -->
-	<link href="/stylesheets/cover.css" rel="stylesheet">
-	<link link="link" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    </head>
+    <!-- Custom styles for this template -->
+    <link href="/stylesheets/cover.css" rel="stylesheet">
+    <link link="link" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  </head>
 
-    <body class="text-center">
+  <body class="text-center">
 
-	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-	    <header class="masthead mb-auto">
-		<div class="inner">
-		    <h3 class="masthead-brand"><a href="/polls" style="color: white">Polls</a></h3>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+	<div class="inner">
 
-		    <% if (!currentUser) { %>
-			<nav class="nav nav-masthead justify-content-center">
-			    <a class="nav-link" href="/polls">Polls</a>
-			    <a class="nav-link" href="/signup">Sign up</a>
-			    <a class="nav-link" href="/signin">Sign in</a>
-			</nav>
-		    <% } else { %>
-			<nav class="nav nav-masthead justify-content-center">
-			    <a class="nav-link" href="/createPoll">Create Poll</a>
-			    <a class="nav-link" href="/profile">Profile</a>
-			    <a class="nav-link" href="/signout">Sign out</a>
-			</nav>
-		    <% } %>
+	  <% if (!currentUser) { %>
+	  <h3 class="masthead-brand"><a href="/" style="color: white">Polls</a></h3>
+	  <nav class="nav nav-masthead justify-content-center">
+	    <a class="nav-link" href="/polls_list">Polls</a>
+	    <a class="nav-link" href="/signup">Sign up</a>
+	    <a class="nav-link" href="/signin">Sign in</a>
+	  </nav>
+	  <% } else { %>
+	  <h3 class="masthead-brand"><a href="/polls_list" style="color: white">Polls</a></h3>
+	  <nav class="nav nav-masthead justify-content-center">
+	    <a class="nav-link" href="/createPoll">Create Poll</a>
+	    <a class="nav-link" href="/profile">Profile</a>
+	    <a class="nav-link" href="/signout">Sign out</a>
+	  </nav>
+	  <% } %>
 
-		</div>
-	    </header>
+	</div>
+      </header>
 
