--- a/views/polls_list.ejs
+++ b/views/polls_list.ejs
@@ -3,11 +3,11 @@
 <% if (!polls.length) { %>
     Gosh, there are no polls :O
 <% } else { %>
-    <ul>
+    <div class="list-group">
 	<% polls.forEach(poll => { %>
-	    <li><a href="/poll?title=<%= poll.title %>"><%= poll.title %></a></li>
+	    <a href="/poll?title=<%= poll.title %>" class="list-group-item list-group-item-action"><%= poll.title %></a>
 	<% }) %>
-    </ul>
+    </div>
 <% } %>
 
 <%- include('footer'); -%>
