Tell user that s/he already voted, if s/he did.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,6 +33,7 @@
 	  <% } else { %>
 	  <h3 class="masthead-brand"><a href="/polls_list" style="color: white">Polls</a></h3>
 	  <nav class="nav nav-masthead justify-content-center">
+	    <a class="nav-link" href="/polls_list">Polls</a>
 	    <a class="nav-link" href="/createPoll">Create Poll</a>
 	    <a class="nav-link" href="/profile">Profile</a>
 	    <a class="nav-link" href="/signout">Sign out</a>
