Show user the option she voted for.

--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -33,7 +33,7 @@
 		<button class="btn btn-primary" type="submit">Submit</button>
 	    </form>
 	<% } else { %>
-	    You have already voted in this poll.
+	    You have voted for <%= userVote %>
 	<% } %>
     <% } %>
 </div>
